# crypto_qa_challenge

./: README.md  test.py
Question 1/: README.md  q1README.md  solution.py  test_solution.py
Question 2/: AppiumSetup.md  README.md  check_appium.py  check_emulator.py  conftest.py  pyproject.toml  requirements.txt  test_ui_automation.py
Question 2/tests/: conftest.py  test_ui_automation.py
Question 3/: README.md  market_data_api.py  pyproject.toml
Question 3/tests/: test_market_data_api.py
